[metadata]
name = Hypper
version = 0.0.1
author = Szymon Janowski
author_email = szy.janowski@gmail.com
description = Hypergraph-based data mining for binary classification
keywords = hypergraph, classification, undersampling, feature selection, hypper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sleter/hypper
project_urls =
    Bug Tracker = https://github.com/sleter/hypper/issues
    Documentation = https://github.com/sleter/hypper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = hypper
packages = find:
python_requires = >=3.7

[options.packages.find]
where = hypper
